--- a/mainPage.kv
+++ b/mainPage.kv
@@ -127,7 +127,7 @@
                 background_color: (0, 0, 0, 0)
                 on_press:
                     root.manager.transition = NoTransition()
-                    root.manager.current = 'Admin_Login'
+                    root.manager.current = 'AboutUs'
             Label:
                 font_size: self.width / 10
                 text: "\nДля чего\nнужна\nсистема?"
@@ -144,7 +144,7 @@
                 background_color: (0, 0, 0, 0)
                 on_press:
                     root.manager.transition = NoTransition()
-                    root.manager.current = 'Admin_Login'
+                    root.manager.current = 'OtherSystems'
             Label:
                 font_size: self.width / 10
                 text: "\n К другим \n приложениям \n экосистемы"
