--- a/adminLogin.kv
+++ b/adminLogin.kv
@@ -1,3 +1,4 @@
+#: import NoTransition kivy.uix.screenmanager.NoTransition
 <AdminLogApp>
     username_input: username_input
     password_input: password_input
