--- a/otherFunctions.kv
+++ b/otherFunctions.kv
@@ -1,4 +1,31 @@
+#: import NoTransition kivy.uix.screenmanager.NoTransition
 <AboutUsApp>
+    canvas:
+        Rectangle:
+            source: 'Images/backgrounds/background4.jpg'
+            pos: self.pos
+            size: self.size
+    Button:
+        size_hint_x: None
+        size_hint_y: None
+        text: "Обратно в меню"
+        size: root.width / 8, root.height / 6
+        on_press:
+            root.manager.transition = NoTransition()
+            root.manager.current = 'Menu'
 
 
 <OtherSystemsApp>
+    canvas:
+        Rectangle:
+            source: 'Images/backgrounds/background4.jpg'
+            pos: self.pos
+            size: self.size
+    Button:
+        size_hint_x: None
+        size_hint_y: None
+        text: "Обратно в меню"
+        size: root.width / 8, root.height / 6
+        on_press:
+            root.manager.transition = NoTransition()
+            root.manager.current = 'Menu'
