--- a/otherFunctions.kv
+++ b/otherFunctions.kv
@@ -5,10 +5,18 @@
             source: 'Images/backgrounds/background4.jpg'
             pos: self.pos
             size: self.size
+    Label:
+        font_name: "RubikMonoOne-Regular"
+        font_size: root.width//12, root.height//12
+        pos: self.width / 25, self.height /13
+        text: "Система <Столовая> автоматизирует\nвзаимодействие сотрудников с компанией\nпредоставляющей услуги\nкорпоративного питания. "
     Button:
         size_hint_x: None
         size_hint_y: None
-        text: "Обратно в меню"
+        font_name: "RubikMonoOne-Regular"
+        text: "Обратно\nв меню"
+        font_size: 16
+        background_color: (1, 1, 1, 0)
         size: root.width / 8, root.height / 6
         on_press:
             root.manager.transition = NoTransition()
