--- a/otherFunctions.kv
+++ b/otherFunctions.kv
@@ -40,7 +40,27 @@
     Button:
         size_hint_x: None
         size_hint_y: None
-        text: "Обратно в меню"
+        font_name: "RubikMonoOne-Regular"
+        text: "Обратно\nв меню"
+        font_size: 16
+        background_color: (1, 1, 1, 0)
+        size: root.width / 8, root.height / 6
+        on_press:
+            root.manager.transition = NoTransition()
+            root.manager.current = 'Menu'
+<Balance>
+    canvas:
+        Rectangle:
+            source: 'Images/backgrounds/background4.jpg'
+            pos: self.pos
+            size: self.size
+    Button:
+        size_hint_x: None
+        size_hint_y: None
+        font_name: "RubikMonoOne-Regular"
+        text: "Обратно\nв меню"
+        font_size: 16
+        background_color: (1, 1, 1, 0)
         size: root.width / 8, root.height / 6
         on_press:
             root.manager.transition = NoTransition()
