--- a/point_choice.kv
+++ b/point_choice.kv
@@ -9,6 +9,6 @@
         cols: 1
         Button:
             id: point_button
-            text: 'Hello'
+            text: 'Выбрать точку'
             size_hint: (None, None)
             pos: (200, 200)
