--- a/mainPage.kv
+++ b/mainPage.kv
@@ -55,7 +55,7 @@
                 background_color: (0, 0, 0, 0)
                 on_press:
                     root.manager.transition = NoTransition()
-                    root.manager.current = 'Admin_Login'
+                    root.manager.current = 'PointChoice'
             Label:
                 text: "\nК точкам"
                 font_size: self.width / 8
