--- a/Points.kv
+++ b/Points.kv
@@ -71,24 +71,44 @@
     GridLayout:
         size: root.width, root.height
         cols: 1
+
         GridLayout:
             cols: 2
             rows: 2
+            canvas.before:
+                Color:
+                    rgba: (.5, .5, .5, 0.15)
+                RoundedRectangle:
+                    size: self.width / 1.3, self.height - self.height/8
+                    pos: root.width / 8, self.y + 14
+                    radius: [15]
 
             Image:
+                id: table1
                 source: "Images/furniter/table3!!png.png"
 
             Image:
+                id: table2
                 source: "Images/furniter/table3!!png.png"
 
             Image:
+                id: table3
                 source: "Images/furniter/table3!!png.png"
 
             Image:
+                id: table4
                 source: "Images/furniter/table3!!png.png"
 
         GridLayout:
             cols: 2
+
+            canvas.before:
+                Color:
+                    rgba: (.5, .5, .5, 0.15)
+                RoundedRectangle:
+                    size: self.width / 4, self.height - self.height / 1.1
+                    pos: root.width / 8, self.y + 168
+                    radius: [15]
 
             Label:
                 text: "Меню: пока что ничего нет"
