--- a/Admin_panel.kv
+++ b/Admin_panel.kv
@@ -12,13 +12,13 @@
         id: point_button_add
         text: 'Добавить точку'
         size_hint: (None, None)
-        pos: (root.width / 6, root.height / 6)
+        pos: (root.width / 7, root.height / 1.3)
 
     Button:
         id: point_button_del
         text: 'Удалить точку'
         size_hint: (None, None)
-        pos: (600, 600)
+        pos: (root.width / 5, 600)
 
     Button:
         id: user_button
