--- a/otherFunctions.kv
+++ b/otherFunctions.kv
@@ -73,7 +73,7 @@
         font_name: "RubikMonoOne-Regular"
         font_size: self.width/35
         pos: self.width / 35, self.height /20
-        text: "2.56 руб."
+        text: ""
     Label:
         text: "Карта в рублях"
         font_name: "MartianMono-SemiBold"
@@ -147,6 +147,7 @@
             text: "Подтвердить"
             font_name: "RubikMonoOne-Regular"
             pos: root.width / 2.2, root.height/2.5
+            size: root.width / 8, root.height / 6
             background_color: (1, 1, 1, 0)
             on_press: root.confirm_deposit()
     Button:
