--- a/otherFunctions.kv
+++ b/otherFunctions.kv
@@ -108,7 +108,7 @@
             font_name: "RubikMonoOne-Regular"
             pos: root.width / 2.15, root.height/35
             background_color: (1, 1, 1, 0)
-            on_press: update_balance()
+            on_press: root.update_balance()
 
     Label:
         canvas.before:
