--- a/Admin_panel.kv
+++ b/Admin_panel.kv
@@ -36,11 +36,18 @@
         font_size: root.height / 50
 
     Button:
+        canvas.before:
+            Color:
+                rgba: (1, 1, 1, 0.2)
+            Rectangle:
+                size: root.width / 5.72, root.height / 27
+                pos: root.width / 2.4, root.height / 1.23
+
         id: point_button_del
-        text: 'Точка'
+        text: 'Выбрать точку'
         size_hint: (None, None)
         size: root.width / 12, root.height / 27
-        pos: (root.width / 2.2, root.height / 1.3)
+        pos: (root.width / 2.15, root.height / 1.23)
         font_name: "RubikMonoOne-Regular"
         background_color: (0, 0, 0, 0)
         font_size: root.height / 50
@@ -56,11 +63,18 @@
         font_size: root.height / 50
 
     Button:
+        canvas.before:
+            Color:
+                rgba: (1, 1, 1, 0.2)
+            Rectangle:
+                size: root.width / 3.6, root.height / 27
+                pos: root.width / 1.48, root.height / 1.23
+
         id: user_button
-        text: 'Пользователь'
+        text: 'Выбрать пользователя'
         size_hint: (None, None)
         size: root.width / 5.6, root.height / 27
-        pos: (root.width / 1.3, root.height / 1.3)
+        pos: (root.width / 1.37, root.height / 1.23)
         font_name: "RubikMonoOne-Regular"
         background_color: (0, 0, 0, 0)
         font_size: root.height / 50
