--- a/Points.kv
+++ b/Points.kv
@@ -1,5 +1,5 @@
 #: import NoTransition kivy.uix.screenmanager.NoTransition
-<Points>
+<PointsApp>
     canvas.before:
         Rectangle:
             source: "Images/backgrounds/background4.jpg"
@@ -61,7 +61,7 @@
             Button:
                 text: "Профиль"
 
-<SomePoint>
+<SomePointApp>
     canvas.before:
         Rectangle:
             source: "Images/backgrounds/background4.jpg"
