--- a/Admin_panel.kv
+++ b/Admin_panel.kv
@@ -1,7 +1,7 @@
 <AdminPanelApp>
     point_button_add: point_button_add
     point_button_del: point_button_del
-    user_button: user_button
+    user_button_del: user_button_del
     apply_point_del: apply_point_del
     apply_user_del: apply_user_del
     apply_point_add: apply_point_add
@@ -12,109 +12,142 @@
             size: self.size
 
     Label:
-        text: 'Добавить точку'
+        text: 'Добавить \nточку'
         size_hint: (None, None)
-        pos: (root.width / 7, root.height / 1.15)
+        pos: (root.width / 15, root.height / 1.15)
         font_name: "RubikMonoOne-Regular"
         background_color: (0, 0, 0, 0)
-        font_size: root.height / 50
+        font_size: root.width / 40
 
     Label:
-        text: "Удалить точку"
+        text: "Удалить \nточку"
         size_hint: (None, None)
-        pos: (root.width / 2.2, root.height / 1.15)
+        pos: (root.width / 2.7, root.height / 1.15)
         font_name: "RubikMonoOne-Regular"
         background_color: (0, 0, 0, 0)
-        font_size: root.height / 50
+        font_size: root.width / 40
 
     Label:
-        text: "Удалить пользователя"
+        text: "Удалить \nпользователя"
         size_hint: (None, None)
-        pos: (root.width / 1.3, root.height / 1.15)
+        pos: (root.width / 1.4, root.height / 1.15)
         font_name: "RubikMonoOne-Regular"
         background_color: (0, 0, 0, 0)
-        font_size: root.height / 50
-
-    Button:
-        canvas.before:
-            Color:
-                rgba: (1, 1, 1, 0.2)
-            Rectangle:
-                size: root.width / 5.72, root.height / 27
-                pos: root.width / 2.4, root.height / 1.23
-
-        id: point_button_del
-        text: 'Выбрать точку'
-        size_hint: (None, None)
-        size: root.width / 12, root.height / 27
-        pos: (root.width / 2.15, root.height / 1.23)
-        font_name: "RubikMonoOne-Regular"
-        background_color: (0, 0, 0, 0)
-        font_size: root.height / 50
-
-    Button:
-        id: apply_point_del
-        text: "Удалить"
-        size_hint: (None, None)
-        size: root.width / 10, root.height / 27
-        pos: (root.width / 2.2, root.height / 1.5)
-        font_name: "RubikMonoOne-Regular"
-        background_color: (0, 0, 0, 0)
-        font_size: root.height / 50
-
-    Button:
-        canvas.before:
-            Color:
-                rgba: (1, 1, 1, 0.2)
-            Rectangle:
-                size: root.width / 3.6, root.height / 27
-                pos: root.width / 1.48, root.height / 1.23
-
-        id: user_button
-        text: 'Выбрать пользователя'
-        size_hint: (None, None)
-        size: root.width / 5.6, root.height / 27
-        pos: (root.width / 1.37, root.height / 1.23)
-        font_name: "RubikMonoOne-Regular"
-        background_color: (0, 0, 0, 0)
-        font_size: root.height / 50
-
-    Button:
-        id: apply_user_del
-        text: "Удалить"
-        size_hint: (None, None)
-        size: root.width / 10, root.height / 27
-        pos: (root.width / 1.3, root.height / 1.5)
-        font_name: "RubikMonoOne-Regular"
-        background_color: (0, 0, 0, 0)
-        font_size: root.height / 50
-
-    Button:
-        text: "Назад в меню"
-        size_hint: (None, None)
-        size: root.width / 5.6, root. height / 27
-        pos: (root.width / 2.2, root.height / 11)
-        font_name: "RubikMonoOne-Regular"
-        background_color: (0, 0, 0, 1)
-        on_press:
-            root.manager.transition = NoTransition()
-            root.manager.current = 'Menu'
+        font_size: root.width / 40
 
     TextInput:
         id: point_button_add
         hint_text: "Введите точку"
         size_hint: (None, None)
-        size: 260, 30
-        pos: (root.width / 11, root.height / 1.23)
+        size: root.width / 4, root.height / 20
+        pos: (root.width / 30, root.height / 1.23)
         font_name: "RubikMonoOne-Regular"
-        font_size: root.height / 50
+        font_size: root.width / 50
 
     Button:
+        canvas.before:
+            Color:
+                rgba: (1, 1, 1, 0.2)
+            RoundedRectangle:
+                size: root.width / 4, root.height / 23
+                pos: root.width / 3, root.height / 1.23
+                radius: [15]
+
+        id: point_button_del
+        text: 'Выбрать точку'
+        size_hint: (None, None)
+        size: root.width / 4, root.height / 20
+        pos: (root.width / 3, root.height / 1.23)
+        font_name: "RubikMonoOne-Regular"
+        background_color: (0, 0, 0, 0)
+        font_size: root.width / 50
+
+    Button:
+        canvas.before:
+            Color:
+                rgba: (1, 1, 1, 0.2)
+            RoundedRectangle:
+                size: root.width / 4, root.height / 20
+                pos: root.width / 1.5, root.height / 1.23
+                radius: [15]
+
+        id: user_button_del
+        text: 'Выбрать юзера'
+        size_hint: (None, None)
+        size: root.width / 4, root.height / 20
+        pos: (root.width / 1.5, root.height / 1.23)
+        font_name: "RubikMonoOne-Regular"
+        background_color: (0, 0, 0, 0)
+        font_size: root.width / 50
+
+    Button:
+        canvas.before:
+            Color:
+                rgba: (1, 1, 1, 0.2)
+            RoundedRectangle:
+                size: root.width / 4, root.height / 20
+                pos: root.width / 25, root.height / 1.5
+                radius: [15]
         id: apply_point_add
         text: "Добавить"
         size_hint: (None, None)
-        size: root.width / 8, root.height / 27
-        pos: (root.width / 7, root.height / 1.5)
+        size: root.width / 4, root.height / 20
+        pos: (root.width / 25, root.height / 1.5)
         font_name: "RubikMonoOne-Regular"
         background_color: (0, 0, 0, 0)
-        font_size: root.height / 50
+        font_size: root.width / 40
+        on_press:
+            root.add_point()
+
+
+    Button:
+        canvas.before:
+            Color:
+                rgba: (1, 1, 1, 0.2)
+            RoundedRectangle:
+                size: root.width / 4, root.height / 20
+                pos: root.width / 2.9, root.height / 1.5
+                radius: [15]
+        id: apply_point_del
+        text: "Удалить"
+        size_hint: (None, None)
+        size: root.width / 4, root.height / 20
+        pos: (root.width / 2.9, root.height / 1.5)
+        font_name: "RubikMonoOne-Regular"
+        background_color: (0, 0, 0, 0)
+        font_size: root.width / 40
+        on_press:
+            root.remove_point()
+
+    Button:
+        canvas.before:
+            Color:
+                rgba: (1, 1, 1, 0.2)
+            RoundedRectangle:
+                size: root.width / 4, root.height / 20
+                pos: root.width / 1.5, root.height / 1.5
+                radius: [15]
+        id: apply_user_del
+        text: "Удалить"
+        size_hint: (None, None)
+        size: root.width / 4, root.height / 20
+        pos: (root.width / 1.5, root.height / 1.5)
+        font_name: "RubikMonoOne-Regular"
+        background_color: (0, 0, 0, 0)
+        font_size: root.width / 40
+        on_press:
+            root.remove_user()
+
+    Button:
+        text: "Назад в меню"
+        size_hint: (None, None)
+        size: root.width / 5.6, root. height / 27
+        pos: (root.width / 2.5, root.height / 11)
+        font_name: "RubikMonoOne-Regular"
+        font_size: root.width / 35
+
+
+        background_color: (0, 0, 0, 1)
+        on_press:
+            root.manager.transition = NoTransition()
+            root.manager.current = 'Menu'
