--- a/adminLogin.kv
+++ b/adminLogin.kv
@@ -49,7 +49,9 @@
             Button:
                 font_name: "RubikMonoOne-Regular"
                 text: 'Войти'
-                on_release: root.check_admin()
+                on_release:
+                    if root.check_admin():
+                        root.manager.current = 'AdminPanel'
                 font_size: self.width / 25
                 background_color: (1, 1, 1, 0.2)
     Button:
