--- a/mainPage.kv
+++ b/mainPage.kv
@@ -35,7 +35,7 @@
         background_color: (0, 0, 0, 0)
         on_press:
             root.manager.transition = NoTransition()
-            root.manager.current = 'AdminPanel'
+            root.manager.current = 'AdminLog'
     GridLayout:
         rows: 5
         GridLayout:
