--- a/point_choice.kv
+++ b/point_choice.kv
@@ -1,14 +1,47 @@
 <PointChoiceApp>
-    point_button: point_button
+
+    point_button_select: point_button_select
     canvas:
         Rectangle:
             source: "Images/backgrounds/background4.jpg"
             pos: self.pos
             size: self.size
-    GridLayout:
-        cols: 1
-        Button:
-            id: point_button
-            text: 'Выбрать точку'
-            size_hint: (None, None)
-            pos: (200, 200)
+
+
+
+    Button:
+        canvas.before:
+            Color:
+                rgba: (1, 1, 1, 0.2)
+            RoundedRectangle:
+                size: root.width / 4, root.height / 23
+                pos: root.width / 3, root.height / 1.23
+                radius: [15]
+
+        id: point_button_select
+        text: 'Выбрать точку'
+        size_hint: (None, None)
+        size: root.width / 4, root.height / 20
+        pos: (root.width / 3, root.height / 1.23)
+        font_name: "RubikMonoOne-Regular"
+        background_color: (0, 0, 0, 0)
+        font_size: root.width / 50
+        on_press:
+            root.select_point()
+
+
+
+
+    Button:
+        text: "Назад в меню"
+        size_hint: (None, None)
+        size: root.width / 5.6, root. height / 27
+        pos: (root.width / 2.5, root.height / 11)
+        font_name: "RubikMonoOne-Regular"
+        font_size: root.width / 35
+
+
+        background_color: (0, 0, 0, 1)
+        on_press:
+            root.manager.transition = NoTransition()
+            root.manager.current = 'Menu'
