--- a/Admin_panel.kv
+++ b/Admin_panel.kv
@@ -7,7 +7,7 @@
     apply_point_add: apply_point_add
     canvas:
         Rectangle:
-            source: "Images/backgrounds/background4.jpg"
+            source: "Images/backgrounds/background5.jpg"
             pos: self.pos
             size: self.size
 
@@ -139,15 +139,13 @@
             root.remove_user()
 
     Button:
-        text: "Назад в меню"
-        size_hint: (None, None)
-        size: root.width / 5.6, root. height / 27
-        pos: (root.width / 2.5, root.height / 11)
+        size_hint_x: None
+        size_hint_y: None
         font_name: "RubikMonoOne-Regular"
-        font_size: root.width / 35
-
-
-        background_color: (0, 0, 0, 1)
+        text: "Обратно\nв меню"
+        font_size: 16
+        background_color: (1, 1, 1, 0)
+        size: root.width / 8, root.height / 6
         on_press:
             root.manager.transition = NoTransition()
             root.manager.current = 'Menu'
