--- a/food_menu.kv
+++ b/food_menu.kv
@@ -1,6 +1,7 @@
 <FoodMenuApp>
     food_button: food_button
     food_image: food_image
+    food_counter: food_counter
     canvas:
         Rectangle:
             source: "Images/backgrounds/background5.jpg"
@@ -38,8 +39,6 @@
         font_name: "RubikMonoOne-Regular"
         background_color: (0, 0, 0, 0)
         font_size: root.width / 50
-        on_release: 
-            root.switch_image()
 
     Button:
         canvas.before:
@@ -50,7 +49,7 @@
                 pos: root.width / 1.5, root.height / 1.5
                 radius: [15]
         id: apply_user_del
-        text: "Удалить"
+        text: "Добавить в заказ"
         size_hint: (None, None)
         size: root.width / 4, root.height / 20
         pos: (root.width / 1.5, root.height / 1.5)
@@ -58,18 +57,102 @@
         background_color: (0, 0, 0, 0)
         font_size: root.width / 40
         on_press:
-            root.remove_user()
+            root.add_to_order()
+    TextInput:
+        id: food_counter
+        hint_text: 'Введите количество'
+        size_hint: (None, None)
+        size: root.width * 0.3, root.height * 0.1
+        pos: root.width * 0.65, root.height * 0.8
+
 
     Button:
-        text: "Назад в меню"
-        size_hint: (None, None)
-        size: root.width / 5.6, root. height / 27
-        pos: (root.width / 2.5, root.height / 11)
+        size_hint_x: None
+        size_hint_y: None
         font_name: "RubikMonoOne-Regular"
-        font_size: root.width / 35
-
-
-        background_color: (0, 0, 0, 1)
+        text: "Обратно\nв меню"
+        font_size: 16
+        background_color: (1, 1, 1, 0)
+        size: root.width / 8, root.height / 6
         on_press:
             root.manager.transition = NoTransition()
             root.manager.current = 'Menu'
+
+    Button:
+        canvas.before:
+            Color:
+                rgba: (1, 1, 1, 0.2)
+            RoundedRectangle:
+                size: root.width / 4, root.height / 20
+                pos: root.width / 1.5, root.height / 1.5
+                radius: [15]
+        id: apply_user_del
+        text: "Добавить в заказ"
+        size_hint: (None, None)
+        size: root.width / 4, root.height / 20
+        pos: (root.width / 1.5, root.height / 1.5)
+        font_name: "RubikMonoOne-Regular"
+        background_color: (0, 0, 0, 0)
+        font_size: root.width / 40
+        on_press:
+            root.manager.transition = NoTransition()
+            root.manager.current = 'Menu'
+
+<FoodCartApp>
+    amount_hint: amount_hint
+    price_hint: price_hint
+    food_exclude_button: food_exclude_button
+    food_exclusion_image: food_exclusion_image
+    canvas:
+        Rectangle:
+            source: "Images/backgrounds/background5.jpg"
+            pos: self.pos
+            size: self.size
+    Button:
+        canvas:
+            Color:
+                rgba: (1, 1, 1, 0.2)
+            RoundedRectangle:
+                size: root.width / 4, root.height / 20
+                pos: root.width / 1.4, root.height / 1.4
+                radius: [15]
+        id: food_exclude_button
+        text: 'Позиция:'
+        size_hint: (None, None)
+        size: root.width / 4, root.height / 20
+        pos: (root.width / 1.4, root.height / 1.4)
+        font_name: "RubikMonoOne-Regular"
+        background_color: (0, 0, 0, 0)
+        font_size: root.width / 35
+    Image:
+        id: food_exclusion_image
+        source: "Images/backgrounds/grey_font.jpg"
+        size_hint: (None, None)
+        size: (root.width / 4, root.height / 4)
+        pos: (root.width * 0.74, root.height / 1.3)
+    Label:
+        size_hint: (None, None)
+        font_size: root.width / 30
+        text: "Кол-во:"
+        font_name: "RubikMonoOne-Regular"
+        size: (root.width / 4, root.height / 4)
+        pos: (root.width * 0.5, root.height / 2)
+    Label:
+        size_hint: (None, None)
+        font_size: root.width / 30
+        text: "Цена:"
+        font_name: "RubikMonoOne-Regular"
+        size: (root.width / 4, root.height / 4)
+        pos: (root.width * 0.5, root.height / 2.5)
+    Label:
+        id: amount_hint
+        size_hint: (None, None)
+        size: (root.width / 4, root.height / 4)
+        pos: (root.width * 0.7, root.height / 2)
+        text: ""
+    Label:
+        id: price_hint
+        size_hint: (None, None)
+        size: (root.width / 4, root.height / 4)
+        pos: (root.width * 0.7, root.height / 2.5)
+        text: ""
